# ai_model_compression

./: .gitignore  README.md  main.py  pyproject.toml
distillation/: README.md  knowledge_distillation.ipynb
how_quantization_works/: README.md  quant_dequant_math.ipynb  quantization_pytorch_example.ipynb
pruning/: README.md  layer_based_pruning.ipynb
static_and_dynamic_quantization/: README.md  static_and_dynamic_quant.ipynb
