[project]
name = "ai-model-compression"
version = "0.1.0"
description = "Understanding how AI model compression and distillation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "torch>=2.7.1",
]
